--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,13 @@
       <li class="nav-item">
         <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
+      
+      <li class="nav-item">
+        <a routerLink="articles" class="nav-link">Articles</a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="add" class="nav-link">Add Article</a>
+      </li>
     </ul>
 
     <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
