--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,18 +1,17 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
-    <header class="jumbotron">
-      <h3>
-        <strong>{{ currentUser.username }}</strong> Profile
-      </h3>
-    </header>
-    <p>
-      <strong>Token:</strong>
-      {{ currentUser.accessToken.substring(0, 20) }} ...
-      {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
-    </p>
+  <header class="jumbotron">
+    <h3>
+      <strong>{{ currentUser.username }}</strong> Profile
+    </h3>
+  </header>
+  <div class="profile-info">
+    
     <p>
       <strong>Email:</strong>
       {{ currentUser.email }}
     </p>
+  </div>
+  <div class="roles">
     <strong>Roles:</strong>
     <ul>
       <li *ngFor="let role of currentUser.roles">
@@ -20,7 +19,10 @@
       </li>
     </ul>
   </div>
-  
-  <ng-template #loggedOut>
+</div>
+
+<ng-template #loggedOut>
+  <div class="logged-out">
     Please login.
-  </ng-template>
+  </div>
+</ng-template>
