--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -89,9 +89,7 @@
                         </div>
                                             </div>
                     <div class="d-flex align-items-center">
-                        <button class="btn btn-sm btn-primary me-2" (click)="addToCart(article)">
-                            <i class="fas fa-cart-plus"></i> Add to Cart
-                        </button>
+                        <button (click)="addToCart( article)">Add to Cart</button>                       
                         <button class="btn btn-sm btn-danger" (click)="deleteArticle(article.id, $event)">
                             <i class="fas fa-trash-alt"></i> Delete
                         </button>
